--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.PodAura" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PodAura" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">
             shortEdges
         </item>
+    </style>
+
+    <style name="Theme.PodAura" parent="Base.Theme.PodAura">
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
     </style>
 
-    <style name="Theme.PodAura.NoActionBar.Splash" parent="Theme.SplashScreen">
+    <style name="Theme.PodAura.Splash" parent="Theme.SplashScreen">
         <item name="postSplashScreenTheme">@style/Theme.PodAura</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
         <item name="windowSplashScreenBackground">@color/splash_background</item>
     </style>
+
 </resources>
